--- a/nftspin.html
+++ b/nftspin.html
@@ -94,28 +94,31 @@
        <section id="payouts" class="payouts">
         <h2>Jackpot Payouts</h2>
         <br>
-        Match 2: 1.25X
+        Match 2: 0.25X
         <br>
-        Match 3: 2X
+        Match 3: 2.5X
         <br>
-        Match 4: 2.5X
+        Match 4: 3.5X
         <br>
-        Match 5: 5X
+        Match 5: 7X
         <br>
-        Match 6: 50X
+        Match 6: 35X
         <br>
-        Match 7: 500X
+        Match 7: 350X
         <br>
-        Match 8: 10,000
+        Match 8: 5,000X
         <br>
         Match 9: JACKPOT!!!
         <br>
         <br>
         *Minimum Bet for Jackpot payout: $1*
         <br>
+        *Payouts inclusive of bet amount*
+        <br>
         </section>
         <br>
         <br>
+        
 
        </section>
 
