--- a/superflip.html
+++ b/superflip.html
@@ -46,15 +46,15 @@
                 <img src="assets/SuperFlip Gif.gif">
             </section>
             <br>
-          <div class="user-box">
-            <input type="number" name="" required placeholder="$10" id="bet">
+          <div class="user-box-superflip">
+            <input type="number" name="" required placeholder="$10" id="flip">
             </div>       
 
         <section class="anybetRes">
             <h2 id="anybetResultA" class=""><span id="anybetResult"><br></span></h2>
         </section>
         <br>
-          <a href="#" type="submit" onclick="betWin()">
+          <a href="#" type="submit" onclick="flipWin()">
             <span></span>
             <span></span>
             <span></span>
