--- a/superflip.html
+++ b/superflip.html
@@ -46,14 +46,16 @@
                 <img src="assets/SuperFlip Gif.gif">
             </section>
             <br>
+            <br>
           <div class="user-box-superflip">
-            <input type="number" name="" required placeholder="$10" id="flip">
+            <input type="number" name="" required placeholder="Bet: $10" id="flip">
             </div>       
-
+<br>
+<br>
         <section class="anybetRes">
-            <h2 id="anybetResultA" class=""><span id="anybetResult"><br></span></h2>
+            <h2 id="flipResultA" class=""><span id="flipResult"><br></span></h2>
         </section>
-        <br>
+       
           <a href="#" type="submit" onclick="flipWin()">
             <span></span>
             <span></span>
