--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
 <br>
 
 <body>
+
+    <section class="adBannerHome">
+        <br>Scroller<br>
+        Scroller<br>
+        Scroller<br>
+        <br>
+    </section>
     
 <div class="waviy">
     <span style="--i:1">$</span>
