--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
     </head>
 
  <!-- Header -->
- <section class="container">
-    <header>
-       <div class="header">
+    <header class="header">
+       <div >
             <div class="leftHeader">LOCOSINO</div>
             <div class="rightHeader">$<span id="userBalance">1000</span></div>
        </div>
