--- a/index.html
+++ b/index.html
@@ -20,10 +20,8 @@
 
  <!-- Header -->
     <header class="header">
-       <div >
             <div class="leftHeader">LOCOSINO</div>
             <div class="rightHeader">$<span id="userBalance">1000</span></div>
-       </div>
       </header>
 
 <body>
@@ -35,11 +33,11 @@
         <br>
     </section>
     
-
+ <!-- NFT SPin -->
     <a href="nftspin.html">
-        <Section id="game1" class="gameBox1">
+    <Section id="game1" class="gameBox1">
 
-    <!-- $$$ Spinner -->
+        <!-- $$$ Spinner -->
             <div class="waviy">
                 <span style="--i:1">$</span>
                 <span style="--i:2">1</span>
@@ -54,13 +52,13 @@
                 <br>SPIN JACKPOT
             </div>
     
-         <!-- Game -->
+        <!-- Game -->
             <img src="assets/NFTSpin.gif">
             <div>NFTSpin</div>     
          </Section>
     </a>
 
-    <section id="game2Small" class="gameBox3Block">
+    <section class="gameBox3Block">
 
          <a href="progressivewin.html">
          <Section id="game2" class="gameBox2">
@@ -86,7 +84,7 @@
         </a>
 
     </section>
-</Section>
+    </Section>
 
 <section id="game6" class="bet-box1">
         <form>
@@ -100,6 +98,39 @@
           </a>          
         </form>
 </section>
+
+<br>
+<a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/green.png">
+       <div>P'Gaw</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/orange.png">
+       <div>21</div>
+    </Section>
+   </a>
+ 
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/red.png">
+       <div>00</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/pink.png">
+       <div>Hi-lo</div>
+    </Section>
+   </a>
+
+
+
 <br>
         <a href="sports.html">
          <Section id="game5" class="gameBox4">
