--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
          </Section>
     </a>
 
+     <!-- middle 3-box group -->
     <section class="gameBox3Block">
 
+    <!-- Tall box -->
+    <!-- Progressive Game -->
          <a href="progressivewin.html">
          <Section id="game2" class="gameBox2">
             <img src="assets/az1.png">
@@ -68,7 +71,7 @@
         </a>
 
     <section id="game2Small" class="gameBox2Small">
-
+    <!-- Superflip -->
         <a href="superflip.html">
          <Section id="game3" class="gameBox">
             <img src="assets/SuperFlip Gif.gif">
@@ -76,6 +79,7 @@
          </Section>
         </a>
 
+    <!-- NFTwist -->
          <a href="nftwist.html">
          <Section id="game4" class="gameBox">
             <img src="assets/wenwin.gif">
@@ -86,6 +90,7 @@
     </section>
     </Section>
 
+ <!-- Anybet -->
 <section id="game6" class="bet-box1">
         <form>
             <a href="anybet.html">
@@ -99,6 +104,7 @@
         </form>
 </section>
 
+<!-- Small boxes - Normal House Games -->
 <br>
 <a href="blackjack.html">
     <Section class="gameBoxSmall">
