--- a/index.html
+++ b/index.html
@@ -135,6 +135,63 @@
     </Section>
    </a>
 
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/green.png">
+       <div>P'Gaw</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/orange.png">
+       <div>21</div>
+    </Section>
+   </a>
+ 
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/red.png">
+       <div>00</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/pink.png">
+       <div>Hi-lo</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/green.png">
+       <div>P'Gaw</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/orange.png">
+       <div>21</div>
+    </Section>
+   </a>
+ 
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/red.png">
+       <div>00</div>
+    </Section>
+   </a>
+
+   <a href="blackjack.html">
+    <Section class="gameBoxSmall">
+       <img src="assets/pink.png">
+       <div>Hi-lo</div>
+    </Section>
+   </a>
 
 
 <br>
