--- a/anybet.html
+++ b/anybet.html
@@ -20,14 +20,10 @@
 
  <!-- Header -->
 
- <section class="container">
- <header>
-    <div class="header">
-        <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-        <div class="centerHeader">LOCOSINO</div>
+ <header class="header">
+    <div class="leftHeader">LOCOSINO</div>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
-    </div>
-   </header>
+</header>
     
 
     <body id="anybetPage">
