--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <span></span>
             <span></span>
             <h2 class="anybetHeading">ANYBET.</h2>
-            <i id="greyText">Instant Wins</i>     
+            <i id="greyText">Win, win fast</i>     
           </a>          
         </form>
 </section>
