--- a/nftwist.html
+++ b/nftwist.html
@@ -19,13 +19,10 @@
     </head>
 
  <!-- Header -->
- <header>
-    <div class="header">
-        <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-        <div class="centerHeader">LOCOSINO</div>
+ <header class="header">
+    <div class="leftHeader">LOCOSINO</div>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
-    </div>
-   </header>
+</header>
 
 <body>
 
