--- a/notzero.html
+++ b/notzero.html
@@ -19,17 +19,14 @@
     </head>
 
  <!-- Header -->
- <body>
+
+    <header class="header">
+        <div class="leftHeader">LOCOSINO</div>
+        <div class="rightHeader">$<span id="userBalance">1000</span></div>
+  </header>
+
+  <body>
     
-<section class="container">
-
-<section class="header">
-    <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-    <div class="centerHeader">LOCOSINO</div>
-    <div class="rightHeader">$30</div>
-
-</section>
-
 <section class="jackpot">
     <div class="waviy">
         <span style="--i:1">$</span>
