--- a/superflip.html
+++ b/superflip.html
@@ -19,14 +19,10 @@
     </head>
 
  <!-- Header -->
- <section class="container">
-    <header>
-       <div class="header">
-           <div class="leftHeader"><a href="index.html"><i class="fa-solid fa-house"></i></a></div>
-           <div class="centerHeader">LOCOSINO</div>
-       <div class="rightHeader">$<span id="userBalance">1000</span></div>
-       </div>
-      </header>
+ <header class="header">
+    <div class="leftHeader">LOCOSINO</div>
+    <div class="rightHeader">$<span id="userBalance">1000</span></div>
+</header>
    
    
    <section>
