--- a/anybet.html
+++ b/anybet.html
@@ -21,7 +21,7 @@
  <!-- Header -->
 
  <header class="header">
-    <div class="leftHeader">LOCOSINO</div>
+    <div class="leftHeader"><a href="index.html">LOCOSINO</a></div>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
     
