--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </head>
 
  <!-- Header -->
-    <header class="header">
-            <div class="leftHeader">LOCOSINO</div>
-            <div class="rightHeader">$<span id="userBalance">1000</span></div>
-      </header>
+ <header class="header">
+    <div class="leftHeader"><a href="index.html">LOCOSINO</a></div>
+    <div class="rightHeader">$<span id="userBalance">1000</span></div>
+</header>
 
 <body>
 
