--- a/notzero.html
+++ b/notzero.html
@@ -19,14 +19,12 @@
     </head>
 
  <!-- Header -->
-
+ <body>
     <header class="header">
-        <div class="leftHeader">LOCOSINO</div>
+        <div class="leftHeader"><a href="index.html">LOCOSINO</a></div>
         <div class="rightHeader">$<span id="userBalance">1000</span></div>
-  </header>
+    </header>
 
-  <body>
-    
 <section class="jackpot">
     <div class="waviy">
         <span style="--i:1">$</span>
