--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
  <!-- Header -->
  <header class="header">
-    <div class="leftHeader"><a href="index.html">LOCOSINO</a></div>
+    <a href="index.html"><div class="leftHeader">LOCOSINO</div></a>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
 
@@ -60,7 +60,6 @@
 
      <!-- middle 3-box group -->
     <section class="gameBox3Block">
-
     <!-- Tall box -->
     <!-- Progressive Game -->
          <a href="progressivewin.html">
