--- a/superflip.html
+++ b/superflip.html
@@ -20,7 +20,7 @@
 
  <!-- Header -->
  <header class="header">
-    <div class="leftHeader"><a href="index.html">LOCOSINO</a></div>
+    <a href="index.html"><div class="leftHeader">LOCOSINO</div></a>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
    
