--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
     </a>
 
      <!-- middle 3-box group -->
-    <section class="gameBox3Block">
     <!-- Tall box -->
     <!-- Progressive Game -->
          <a href="progressivewin.html">
          <Section id="game2" class="gameBox2">
             <img src="assets/az1.png">
             <div>Progressive</div>
-         </Section>
+        </section>
         </a>
+    
 
     <section id="game2Small" class="gameBox2Small">
     <!-- Superflip -->
@@ -81,16 +81,17 @@
     <!-- NFTwist -->
          <a href="nftwist.html">
          <Section id="game4" class="gameBox">
-            <img src="assets/wenwin.gif">
+            <img src="assets/SuperFlip Gif.gif">
             <div>NFTwist</div>
          </Section>
         </a>
 
-    </section>
+    
     </Section>
 
+    <br>
  <!-- Anybet -->
-<section id="game6" class="bet-box1">
+<section class="bet-box1">
         <form>
             <a href="anybet.html">
             <span></span>
