--- a/index.html
+++ b/index.html
@@ -26,6 +26,46 @@
 
 <body>
 
+    <section class="g1">
+        <img src="assets/az1.png">
+    </section>
+
+<section class="g3">
+    <section class="g2">
+        <img src="assets/az1.png">
+    </section>
+
+    <section class="g2">
+        <img src="assets/az1.png">
+    </section>
+</section>
+
+    <section class="g1">
+        <img src="assets/az1.png">
+    </section>
+
+    <section class="g1">
+        <img src="assets/az1.png">
+    </section>
+
+    <section class="g1">
+        <img src="assets/az1.png">
+    </section>
+
+    
+
+    <section class="g2">
+        <img src="assets/az1.png">
+    </section>
+
+    <section class="g2">
+        <img src="assets/az1.png">
+    </section>
+
+
+
+
+
     <section class="adBannerHome">
         <br>Scroller<br>
         Scroller<br>
@@ -81,7 +121,7 @@
     <!-- NFTwist -->
          <a href="nftwist.html">
          <Section id="game4" class="gameBox">
-            <img src="assets/SuperFlip Gif.gif">
+            <img src="assets/wenwin.gif">
             <div>NFTwist</div>
          </Section>
         </a>
