--- a/index.html
+++ b/index.html
@@ -27,16 +27,56 @@
 <body>
 
     <section class="g1">
-        <img src="assets/az1.png">
+        <img src="assets/NFTSpin.gif">
+        NFTSpin
     </section>
 
 <section class="g3">
-    <section class="g2">
-        <img src="assets/az1.png">
-    </section>
 
     <section class="g2">
-        <img src="assets/az1.png">
+        <img src="assets/SuperFlip Gif.gif">
+        Superflip
+    </section>
+    <section class="g2">
+        <img src="assets/wenwin.gif">
+        Game
+    </section>
+</section>
+
+<br>
+<br>
+
+<section class="g3">
+<br>
+    <!-- Anybet -->
+<section class="bet-box1">
+    <form>
+        <a href="anybet.html">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+        <h2 class="anybetHeading">ANYBET.</h2>
+        <i id="greyText">Win, win fast</i>     
+      </a>          
+    </form>
+</section>
+
+    <section class="g4">
+        <img src="assets/pink.png">
+        ok
+    </section>
+    <section class="g4">
+        <img src="assets/green.png">
+        ok
+    </section>
+    <section class="g4">
+        <img src="assets/orange.png">
+        ok
+    </section>
+    <section class="g4">
+        <img src="assets/red.png">
+       ok
     </section>
 </section>
 
