--- a/index.html
+++ b/index.html
@@ -26,13 +26,43 @@
 
 <body>
 
+<!-- NFT SPin -->
+<a href="nftspin.html">
+    <Section id="game1" class="gameBox1">
+
+        <!-- $$$ Spinner -->
+            <div class="waviy">
+                <span style="--i:1">$</span>
+                <span style="--i:2">1</span>
+                <span style="--i:3">,</span>
+                <span style="--i:4">0</span>
+                <span style="--i:5">0</span>
+                <span style="--i:6">0</span>
+                <span style="--i:7">,</span>
+                <span style="--i:8">0</span>
+                <span style="--i:9">0</span>
+                <span style="--i:10">0</span>
+                <br>SPIN JACKPOT
+            </div>
+
     <section class="g1">
         <img src="assets/NFTSpin.gif">
         NFTSpin
     </section>
+<br>
+<br>
 
-<section class="g3">
+    <section class="g2">
+        <img src="assets/SuperFlip Gif.gif">
+        Superflip
+    </section>
 
+    <section class="g2">
+        <img src="assets/wenwin.gif">
+        Game
+    </section>
+<br>
+<br>
     <section class="g2">
         <img src="assets/SuperFlip Gif.gif">
         Superflip
@@ -41,12 +71,8 @@
         <img src="assets/wenwin.gif">
         Game
     </section>
-</section>
 
 <br>
-<br>
-
-<section class="g3">
 <br>
     <!-- Anybet -->
 <section class="bet-box1">
@@ -61,7 +87,8 @@
       </a>          
     </form>
 </section>
-
+<br>
+<br>
     <section class="g4">
         <img src="assets/pink.png">
         ok
@@ -82,6 +109,7 @@
 
     <section class="g1">
         <img src="assets/az1.png">
+        ok
     </section>
 
     <section class="g1">
@@ -104,7 +132,7 @@
 
 
 
-
+ <!-- Original Layout below -->
 
     <section class="adBannerHome">
         <br>Scroller<br>
