--- a/index.html
+++ b/index.html
@@ -59,18 +59,18 @@
 
     <section class="g2">
         <img src="assets/wenwin.gif">
-        Game
+        NFTwist
     </section>
 <br>
 <br>
     <section class="g2">
         <img src="assets/wenwin.gif">        
-        Superflip
+        Gauntlet
     </section>
-    
+
     <section class="g2">
         <img src="assets/SuperFlip Gif.gif">
-        Game
+        BANG
     </section>
 
 <br>
@@ -92,47 +92,27 @@
 <br>
     <section class="g4">
         <img src="assets/pink.png">
-        ok
+        21
     </section>
     <section class="g4">
         <img src="assets/green.png">
-        ok
+        P'Gaw
     </section>
     <section class="g4">
         <img src="assets/orange.png">
-        ok
+        Z-Zero
     </section>
     <section class="g4">
         <img src="assets/red.png">
-       ok
+       Hi-lo
     </section>
 </section>
 
-    <section class="g1">
-        <img src="assets/az1.png">
-        ok
-    </section>
-
-    <section class="g1">
-        <img src="assets/az1.png">
-    </section>
-
-    <section class="g1">
-        <img src="assets/az1.png">
-    </section>
-
     
-
-    <section class="g2">
-        <img src="assets/az1.png">
-    </section>
-
-    <section class="g2">
-        <img src="assets/az1.png">
-    </section>
-
-
-
+<br>
+<br>
+<br>
+<br>
  <!-- Original Layout below -->
 
     <section class="adBannerHome">
