--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
 
 <body>
 
+<!-- Ad Banner -->
+<section class="adBannerHome">
+    <br>Scroller<br>
+    <br>Scroller<br>
+    <br>Scroller<br>
+    <br>
+</section>
+
 <!-- NFT SPin -->
 <a href="nftspin.html">
     <Section id="game1" class="gameBox1">
@@ -51,7 +59,7 @@
     </section>
 <br>
 <br>
-
+<br>
     <section class="g2">
         <img src="assets/SuperFlip Gif.gif">
         Superflip
