--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 
 <!-- Ad Banner -->
 <section class="adBannerHome">
-    <br>Scroller<br>
-    <br>Scroller<br>
-    <br>Scroller<br>
-    <br>
+    <br>Banner Scroller<br>
+    <br><br>
 </section>
 
 <!-- NFT SPin -->
@@ -71,18 +69,7 @@
     </section>
 <br>
 <br>
-    <section class="g2">
-        <img src="assets/wenwin.gif">        
-        Gauntlet
-    </section>
 
-    <section class="g2">
-        <img src="assets/SuperFlip Gif.gif">
-        BANG
-    </section>
-
-<br>
-<br>
     <!-- Anybet -->
 <section class="bet-box1">
     <form>
