--- a/index2.html
+++ b/index2.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="assets/css/style.css">
                 
         <!-- Description, Kyewords, Title -->
-        <title>Trust in Pat</title>
+        <title>Founders Casino</title>
             <meta name="description" content="Crypto's Crazy Casino - Crazy Games, Crazy Prices">
             <meta name="keywords" content="crypto, gambling, betting, games, coinflip, slots, sportsbetting">
     </head>
 
  <!-- Header -->
  <header class="header">
-    <a href="index.html"><div class="leftHeader">LOCOSINO</div></a>
+    <a href="index2.html"><div class="leftHeader">Founders Casino</div></a>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
 
@@ -33,7 +33,7 @@
 </section>
 
 <!-- NFT SPin -->
-<a href="nftspin.html">
+<a href="nftspinfounders.html">
     <Section id="game1" class="gameBox1">
 
         <!-- $$$ Spinner -->
@@ -52,21 +52,21 @@
             </div>
 
     <section class="g1">
-        <img src="assets/NFTSpin.gif">
+        <img src="assets/fspingif.gif">
         NFTSpin
     </section>
 <br>
 <br>
 <br>
-<a href="superflip.html">
+<a href="superflipfounders.html">
     <section class="g2">
-        <img src="assets/SuperFlip Gif.gif">
+        <img src="assets/f1.gif">
         Superflip
     </section>
 </a>
-<a href="nftwist.html">
+<a href="nftwistfounders.html">
     <section class="g2">
-        <img src="assets/wenwin.gif">
+        <img src="assets/ftwist gif.gif">
         NFTwist
     </section>
 </a>
@@ -149,7 +149,7 @@
 
         </section>
 
-        <script src="assets/js/script.js"></script>
+        <script src="assets/js/scriptfounders.js"></script>
         <!--font awesome script-->
         <script src="https://kit.fontawesome.com/1f271c2fd4.js" crossorigin="anonymous"></script>
     </body>
