--- a/nftwistfounders.html
+++ b/nftwistfounders.html
@@ -20,7 +20,7 @@
 
  <!-- Header -->
  <header class="header">
-    <a href="index.html"><div class="leftHeader">LOCOSINO</div></a>
+    <a href="index2.html"><div class="leftHeader">Founders Casino</div></a>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
 
@@ -80,7 +80,7 @@
     
 
         
-        <script src="assets/js/script.js"></script>
+        <script src="assets/js/scriptfounders.js"></script>
         <!--font awesome script-->
         <script src="https://kit.fontawesome.com/1f271c2fd4.js" crossorigin="anonymous"></script>
     </body>
