--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,7 @@
     <!-- Anybet -->
 <section class="bet-box1">
     <form>
-        <a href="anybet.html">
+        <a href="anybetfounders.html">
         <span></span>
         <span></span>
         <span></span>
