--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 
         <!-- Description, Kyewords, Title -->
         <title>Trust in Pat</title>
-            <meta name="description" content="Crypto's Crazy Casino - Crazy Games, Crazy Prices">
+            <meta name="description" content="Crypto's Crazy Casino - Crazy Games, Crazy Prizes">
             <meta name="keywords" content="crypto, gambling, betting, games, coinflip, slots, sportsbetting">
     </head>
 
@@ -70,6 +70,7 @@
         NFTwist
     </section>
 </a>
+<br>
 <br>
 <br>
 
