--- a/index3.html
+++ b/index3.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="assets/css/style.css">
                 
         <!-- Description, Kyewords, Title -->
-        <title>Founders Casino</title>
+        <title>Trust in Pat</title>
             <meta name="description" content="Crypto's Crazy Casino - Crazy Games, Crazy Prizes">
             <meta name="keywords" content="crypto, gambling, betting, games, coinflip, slots, sportsbetting">
     </head>
 
  <!-- Header -->
  <header class="header">
-    <a href="index2.html"><div class="leftHeader">Founders Casino</div></a>
+    <a href="index3.html"><div class="leftHeader">Nekozuma Casino</div></a>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
 
@@ -33,7 +33,7 @@
 </section>
 
 <!-- NFT SPin -->
-<a href="nftspinfounders.html">
+<a href="nftspinneko.html">
     <Section id="game1" class="gameBox1">
 
         <!-- $$$ Spinner -->
@@ -52,31 +52,32 @@
             </div>
 
     <section class="g1">
-        <img src="assets/fspingif.gif">
+        <img src="assets/NekoSpingif.gif">
         NFTSpin
     </section>
 <br>
 <br>
 <br>
-<a href="superflipfounders.html">
+<a href="superflipneko.html">
     <section class="g2">
-        <img src="assets/f1.gif">
+        <img src="assets/nekoflipgif.gif">
         Superflip
     </section>
 </a>
-<a href="nftwistfounders.html">
+<a href="nftwistneko.html">
     <section class="g2">
-        <img src="assets/ftwist gif.gif">
+        <img src="assets/nekotwistgif.gif">
         NFTwist
     </section>
 </a>
 <br>
 <br>
 <br>
+
     <!-- Anybet -->
 <section class="bet-box1">
     <form>
-        <a href="anybetfounders.html">
+        <a href="anybetneko.html">
         <span></span>
         <span></span>
         <span></span>
@@ -149,7 +150,7 @@
 
         </section>
 
-        <script src="assets/js/scriptfounders.js"></script>
+        <script src="assets/js/scriptneko.js"></script>
         <!--font awesome script-->
         <script src="https://kit.fontawesome.com/1f271c2fd4.js" crossorigin="anonymous"></script>
     </body>
