--- a/anybetfounders.html
+++ b/anybetfounders.html
@@ -72,7 +72,10 @@
     <br>
     <section>
 </section>
-
+<div class="right">Anybet $<span id="anybetWallet">1000</span></div>
+    <div class="right">House $<span id="pw">0</span></div>
+    <div class="right">J1 $<span id="j1">0</span></div>
+    <div class="right">J2 $<span id="j2">0</span></div>
 </section>
         
         <script src="assets/js/scriptfounders.js"></script>
