--- a/index.html
+++ b/index.html
@@ -28,48 +28,48 @@
 
 <!-- Ad Banner -->
 <section class="adBannerHome">
-    <br>Banner Scroller<br>
-    <br><br>
+    <br><div class="waviy">
+        <span style="--i:1">$</span>
+        <span style="--i:2">1</span>
+        <span style="--i:3">,</span>
+        <span style="--i:4">0</span>
+        <span style="--i:5">0</span>
+        <span style="--i:6">0</span>
+        <span style="--i:7">,</span>
+        <span style="--i:8">0</span>
+        <span style="--i:9">0</span>
+        <span style="--i:10">0</span>
+        <br>SPIN JACKPOT
+    </div>
+    <br>
 </section>
 
 <!-- NFT SPin -->
 <a href="nftspin.html">
-    <Section id="game1" class="gameBox1">
-
-        <!-- $$$ Spinner -->
-            <div class="waviy">
-                <span style="--i:1">$</span>
-                <span style="--i:2">1</span>
-                <span style="--i:3">,</span>
-                <span style="--i:4">0</span>
-                <span style="--i:5">0</span>
-                <span style="--i:6">0</span>
-                <span style="--i:7">,</span>
-                <span style="--i:8">0</span>
-                <span style="--i:9">0</span>
-                <span style="--i:10">0</span>
-                <br>SPIN JACKPOT
-            </div>
-
-    <section class="g1">
+       <section class="g1">
         <img src="assets/NFTSpin.gif">
         NFTSpin
     </section>
-<br>
-<br>
-<br>
+
 <a href="superflip.html">
     <section class="g2">
         <img src="assets/SuperFlip Gif.gif">
         Superflip
     </section>
 </a>
+<br>
 <a href="nftwist.html">
     <section class="g2">
         <img src="assets/wenwin.gif">
         NFTwist
     </section>
 </a>
+
+<a href="nftwist.html">
+    <section class="g2">
+        <h2 class="anybetHeading">ANYBET</h2>
+        ANYBet
+    </section>
 <br>
 <br>
 <br>
@@ -93,15 +93,15 @@
 <a class="comingSoon">Coming soon</a>
 <br>
     <section class="g4">
-        <img src="assets/pink.png">
+        <img src="assets/SuperFlip Gif.gif">
         BJ 21
     </section>
     <section class="g4">
-        <img src="assets/green.png">
+        <img src="assets/wenwin.gif">
         P'Gaw
     </section>
     <section class="g4">
-        <img src="assets/orange.png">
+        <img src="assets/NFTSpin.gif">
         Z-Zero
     </section>
     <section class="g4">
