--- a/index.html
+++ b/index.html
@@ -65,10 +65,11 @@
     </section>
 </a>
 
-<a href="nftwist.html">
-    <section class="g2">
+<a href="anybet.html">
+    <section class="g2">        
         <h2 class="anybetHeading">ANYBET</h2>
-        ANYBet
+        Win, Win Fast
+        </a>
     </section>
 <br>
 <br>
