--- a/index.html
+++ b/index.html
@@ -75,40 +75,26 @@
 <br>
 <br>
 
-    <!-- Anybet -->
-<section class="bet-box1">
-    <form>
-        <a href="anybet.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <h2 class="anybetHeading">ANYBET.</h2>
-        <i id="greyText">Win, win fast</i>     
-      </a>          
-    </form>
-</section>
-<br>
 <br>
 <br>
 <a class="comingSoon">Coming soon</a>
 <br>
-    <section class="g4">
-        <img src="assets/SuperFlip Gif.gif">
-        BJ 21
-    </section>
-    <section class="g4">
-        <img src="assets/wenwin.gif">
-        P'Gaw
-    </section>
-    <section class="g4">
-        <img src="assets/NFTSpin.gif">
-        Z-Zero
-    </section>
-    <section class="g4">
-        <img src="assets/red.png">
-       Hi-lo
-    </section>
+<section class="g4">
+    <img src="assets/pink.png">
+    BJ 21
+</section>
+<section class="g4">
+    <img src="assets/green.png">
+    P'Gaw
+</section>
+<section class="g4">
+    <img src="assets/orange.png">
+    Z-Zero
+</section>
+<section class="g4">
+    <img src="assets/red.png">
+   Hi-lo
+</section>
 </section>
 
     
