--- a/index2.html
+++ b/index2.html
@@ -28,85 +28,73 @@
 
 <!-- Ad Banner -->
 <section class="adBannerHome">
-    <br>Banner Scroller<br>
-    <br><br>
+    <br><!-- $$$ Spinner -->
+    <div class="waviy">
+        <span style="--i:1">$</span>
+        <span style="--i:2">1</span>
+        <span style="--i:3">,</span>
+        <span style="--i:4">0</span>
+        <span style="--i:5">0</span>
+        <span style="--i:6">0</span>
+        <span style="--i:7">,</span>
+        <span style="--i:8">0</span>
+        <span style="--i:9">0</span>
+        <span style="--i:10">0</span>
+        <br>SPIN JACKPOT
+    </div><br>
 </section>
 
 <!-- NFT SPin -->
 <a href="nftspinfounders.html">
-    <Section id="game1" class="gameBox1">
-
-        <!-- $$$ Spinner -->
-            <div class="waviy">
-                <span style="--i:1">$</span>
-                <span style="--i:2">1</span>
-                <span style="--i:3">,</span>
-                <span style="--i:4">0</span>
-                <span style="--i:5">0</span>
-                <span style="--i:6">0</span>
-                <span style="--i:7">,</span>
-                <span style="--i:8">0</span>
-                <span style="--i:9">0</span>
-                <span style="--i:10">0</span>
-                <br>SPIN JACKPOT
-            </div>
-
     <section class="g1">
         <img src="assets/fspingif.gif">
         NFTSpin
     </section>
-<br>
-<br>
-<br>
+
 <a href="superflipfounders.html">
     <section class="g2">
         <img src="assets/f1.gif">
         Superflip
     </section>
 </a>
+
 <a href="nftwistfounders.html">
     <section class="g2">
         <img src="assets/ftwist gif.gif">
         NFTwist
     </section>
 </a>
+
+<a href="anybetneko.html">
+    <section class="g2">        
+        <h2 class="anybetHeading">ANYBET</h2>
+        Win, Win Fast
+        </a>
+    </section>
 <br>
 <br>
 <br>
-    <!-- Anybet -->
-<section class="bet-box1">
-    <form>
-        <a href="anybetfounders.html">
-        <span></span>
-        <span></span>
-        <span></span>
-        <span></span>
-        <h2 class="anybetHeading">ANYBET.</h2>
-        <i id="greyText">Win, win fast</i>     
-      </a>          
-    </form>
-</section>
-<br>
+
 <br>
 <br>
 <a class="comingSoon">Coming soon</a>
 <br>
-    <section class="g4">
-        <img src="assets/pink.png">
-        BJ 21
-    </section>
-    <section class="g4">
-        <img src="assets/green.png">
-        P'Gaw
-    </section>
-    <section class="g4">
-        <img src="assets/orange.png">
-        Z-Zero
-    </section>
-    <section class="g4">
-        <img src="assets/red.png">
-       Hi-lo
-    </section>
+<section class="g4">
+    <img src="assets/pink.png">
+    BJ 21
+</section>
+<section class="g4">
+    <img src="assets/green.png">
+    P'Gaw
+</section>
+<section class="g4">
+    <img src="assets/orange.png">
+    Z-Zero
+</section>
+<section class="g4">
+    <img src="assets/red.png">
+   Hi-lo
+</section>
 </section>
 
     
