--- a/index2.html
+++ b/index2.html
@@ -65,7 +65,7 @@
     </section>
 </a>
 
-<a href="anybetneko.html">
+<a href="anybetfounders.html">
     <section class="g2">        
         <h2 class="anybetHeading">ANYBET</h2>
         Win, Win Fast
