--- a/index.html
+++ b/index.html
@@ -57,13 +57,30 @@
         Superflip
     </section>
 </a>
-<br>
 <a href="nftwist.html">
     <section class="g2">
         <img src="assets/wenwin.gif">
         NFTwist
     </section>
 </a>
+<a class="comingSoon">Coming soon</a>
+<br>
+<section class="g4">
+    <img src="assets/pink.png">
+    BJ 21
+</section>
+<section class="g4">
+    <img src="assets/green.png">
+    P'Gaw
+</section>
+<section class="g4">
+    <img src="assets/orange.png">
+    Z-Zero
+</section>
+<section class="g4">
+    <img src="assets/red.png">
+   Hi-lo
+</section>
 
 <a href="anybet.html">
     <section class="g2">        
