--- a/index.html
+++ b/index.html
@@ -53,41 +53,47 @@
 
 <a href="superflip.html">
     <section class="g2">
-        <img src="assets/SuperFlip Gif.gif">
+        <img src="assets/patCoinflip.gif">
         Superflip
     </section>
 </a>
 <a href="nftwist.html">
     <section class="g2">
-        <img src="assets/wenwin.gif">
+        <img src="assets/patCube.gif">
         NFTwist
     </section>
 </a>
+
+<a href="anybet.html">
+    <section class=""> 
+    <section class=anybetBox>       
+        <p class="anybetHeading">ANYBET</p>
+        <p>Win, Win Fast</p>
+        </section>        
+        </a>
+    </section>
+    <br>
+    <br>
 <a class="comingSoon">Coming soon</a>
 <br>
 <section class="g4">
-    <img src="assets/pink.png">
+    <img src="assets/patTwist.gif">
     BJ 21
 </section>
 <section class="g4">
-    <img src="assets/green.png">
+    <img src="assets/patScrollUp.gif">
     P'Gaw
 </section>
 <section class="g4">
-    <img src="assets/orange.png">
+    <img src="assets/patExplode.gif">
     Z-Zero
 </section>
 <section class="g4">
-    <img src="assets/red.png">
+    <img src="assets/patHallway.gif">
    Hi-lo
 </section>
 
-<a href="anybet.html">
-    <section class="g2">        
-        <h2 class="anybetHeading">ANYBET</h2>
-        Win, Win Fast
-        </a>
-    </section>
+
 <br>
 <br>
 <br>
