--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <a href="superflip.html">
     <section class="g2">
-        <img src="assets/patCoinflip.gif">
+        <img src="assets/patSpinner.gif">
         Superflip
     </section>
 </a>
