--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
 </a>
 
 <a href="anybet.html">
-    <section class=""> 
     <section class=anybetBox>       
         <p class="anybetHeading">ANYBET</p>
-        <p>Win, Win Fast</p>
+        <h4>Win, Win Fast</h4>
         </section>        
         </a>
     </section>
