--- a/index3.html
+++ b/index3.html
@@ -65,7 +65,7 @@
     </section>
 </a>
 <a href="anybetneko.html">
-    <section class="g2">        
+    <section class="anybetBox">        
         <h2 class="anybetHeading">ANYBET</h2>
         Win, Win Fast
         </a>
