--- a/index2.html
+++ b/index2.html
@@ -66,7 +66,7 @@
 </a>
 
 <a href="anybetfounders.html">
-    <section class="g2">        
+    <section class="anybetBox">        
         <h2 class="anybetHeading">ANYBET</h2>
         Win, Win Fast
         </a>
