--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="assets/css/style.css">
                 
         <!-- Description, Kyewords, Title -->
-        <title>Trust in Pat</title>
+        <title>LOCOSINO - Crypto's Craziest Casino</title>
             <meta name="description" content="Crypto's Crazy Casino - Crazy Games, Crazy Prizes">
             <meta name="keywords" content="crypto, gambling, betting, games, coinflip, slots, sportsbetting">
     </head>
 
  <!-- Header -->
  <header class="header">
-    <a href="index.html"><div class="leftHeader">LOCOSINO</div></a>
+    <a href="index.html"><div class="leftHeader">LOCOSINO</a></div>
     <div class="rightHeader">$<span id="userBalance">1000</span></div>
 </header>
 
